# ChangeLog for media-libs/libmustux
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libmustux/ChangeLog,v 1.28 2006/05/08 04:16:56 tcort Exp $

  08 May 2006; <tcort@gentoo.org> libmustux-0.20.2-r1.ebuild:
  Added eutils to inherit line since the ebuild uses epatch.

  20 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  libmustux-0.20.2-r1.ebuild:
  Fix typo in the patch for bug #118175.

  18 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/libmustux-0.20.2-qualifications.patch, libmustux-0.20.2-r1.ebuild:
  Add patch to fix extra qualifications as per bug #118175.

  27 Mar 2006; Luis Medinas <metalgod@gentoo.org> -libmustux-0.20.1.ebuild,
  libmustux-0.20.2.ebuild, libmustux-0.20.2-r1.ebuild:
  Modular X Love Closes bug #126926. Remove older version.

  19 Nov 2005; Herbie Hopkins <herbs@gentoo.org> libmustux-0.20.2-r1.ebuild:
  Fix multilib issue, bug 112982.

*libmustux-0.20.2-r1 (07 Oct 2005)

  07 Oct 2005; Diego Pettenò <flameeyes@gentoo.org>
  +libmustux-0.20.2-r1.ebuild:
  Added new revision that does not assume GNU ld usage. Uses eautoreconf to
  run autotools and calls elibtoolize. src_compile falls back to the default.

  07 Jul 2005; Caleb Tennis <caleb@gentoo.org> libmustux-0.20.1.ebuild,
  libmustux-0.20.2.ebuild:
  Fix qt dep

  21 Mar 2005; Jan Brinkmann <luckyduck@gentoo.org> libmustux-0.20.2.ebuild:
  added libtoolize call, fixes #82361

  20 Oct 2004; Jeremy Huddleston <eradicator@gentoo.org>
  -files/libmustux-0.16.0-alsalib-fix.patch, -libmustux-0.16.0.ebuild,
  -libmustux-0.17.5.ebuild, -libmustux-0.20.0.ebuild:
  Removing old versions.

  01 Sep 2004; Jeremy Huddleston <eradicator@gentoo.org>
  libmustux-0.20.2.ebuild:
  Stable amd64, x86.

  08 Aug 2004; Tom Martin <slarti@gentoo.org> libmustux-0.16.0.ebuild,
  libmustux-0.17.5.ebuild, libmustux-0.20.0.ebuild, libmustux-0.20.1.ebuild,
  libmustux-0.20.2.ebuild:
  Typo in DESCRIPTION: Libary -> Library. Bug 59717.
