@@ -1,1 +1,3 @@
 MD5 787a3fa3241ee6d5765e9a109e6ba042 libmustux-0.20.2.tar.gz 344510
+RMD160 336aea6892edb646f4f5c5d869de0ca1349c4c82 libmustux-0.20.2.tar.gz 344510
+SHA256 c476cd894b367988b07628cda6fbb5c3a59fb77b2daa3c66f0deb10a6529b073 libmustux-0.20.2.tar.gz 344510
