@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/libmustux
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libmustux/ChangeLog,v 1.28 2006/05/08 04:16:56 tcort Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libmustux/ChangeLog,v 1.29 2006/10/28 00:45:27 flameeyes Exp $
+
+  28 Oct 2006; Diego Pettenò <flameeyes@gentoo.org>
+  libmustux-0.20.2-r1.ebuild:
+  Add version dependencies of autotools. Thanks to Patrick Lauer in bug #153059.
 
   08 May 2006; <tcort@gentoo.org> libmustux-0.20.2-r1.ebuild:
   Added eutils to inherit line since the ebuild uses epatch.
